# PixelFPS

./: .gitignore  CMakeLists.txt  LICENSE  PixelFPS.sln  README.md  game_setting.txt
mylib/include/: OLCSprite.hpp
olcPGE/: olcPixelGameEngine.h
res/: AK.spr  AWP.spr  KNIFE.spr  M4A1.spr  aeksu_weapon.spr  ak47.spr  de.spr  deagle.spr  flower.spr  fps_bullet.spr  fps_explosion.spr  fps_fireball1.spr  fps_wall1.spr
res/pxs/: AK.pxs  AWP.pxs  KNIFE.pxs  M4A1.pxs  aeksu_weapon.pxs  ak47.pxs  de.pxs  deagle.pxs  flower.pxs  fps_bullet.pxs  fps_explosion.pxs  fps_fireball1.pxs  fps_lamp1.pxs  fps_wall1.pxs
src/PixelFPSClientDemo/: client.cpp
src/PixelFPSDemo/: Audio.cpp  Audio.hpp  AudioPool.cpp  AudioPool.hpp  File.cpp  File.hpp  GameObject.hpp  MinDefines.hpp  OneLoneCoder_PGE_RayCastWorld_Simple.cpp  PixelFPSDemo.vcxproj  PixelFPSDemo.vcxproj.filters  RaycastWorldExample.cpp  String.cpp  String.hpp  json.hpp  olcPGEX_RayCastWorld.h  olcPixelGameEngine.h  source.cpp
src/PixelFPSDemo2/: BMP.h  BMPRenderer.cpp  BMPRenderer.hpp  Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  EasyBMP.cpp  FPS_Client.hpp  FPS_Server.hpp  GameManager.cpp  GameManager.hpp  GameObject.cpp  GameObject.hpp  LifeController.cpp  LifeController.hpp  NetworkCollider.cpp  NetworkCollider.hpp  NetworkID.cpp  NetworkID.hpp  NetworkMessage.hpp  PNGRenderer.cpp  PNGRenderer.hpp  PixelEditor.hpp  PixelFPSDemo2.hpp  PixelFPSDemo2.vcxproj  PixelFPSDemo2.vcxproj.filters  PointLight.cpp  PointLight.hpp  Resources.hpp  (+14 more)
src/PixelFPSDemo2_Server/: CMakeLists.txt  PixelFPSDemo2_Server.cpp
